<resources>
    <string name="app_name">GenerosAnime</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="previous">Back</string>
    <string name="first_fragment_label">Generos Anime</string>


    <string name="slice_of_life">Slice of Life</string>
    <string name="accion">Accion</string>
    <string name="comedia">Comedia</string>
    <string name="drama">Drama</string>
    <string name="romance">Romance</string>



    <string name="anohana_text">Anohana</string>
    <string name="hyouka_text">Hyouka</string>
    <string name="naruto_text">Naruto</string>
    <string name="one_punch_text">One Punch</string>
    <string name="dr_stone_text">Dr Stone</string>
    <string name="mob_psycho_text">Mob Psycho</string>
    <string name="kimi_ni_todoke_text">Kimi ni Todoke</string>
    <string name="re_zero_text">Re:Zero</string>
    <string name="relife_text">ReLIFE</string>
    <string name="toradora_text">Toradora</string>

</resources>