<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GenerosAnimeFragment">

    <ImageButton
        android:id="@+id/sliceoflife"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="#00FFFFFF"
        android:src="@mipmap/ic_anohana"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@mipmap/ic_anohana" />

    <ImageButton
        android:id="@+id/accion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:src="@mipmap/ic_onepunch"
        app:layout_constraintBottom_toBottomOf="@+id/sliceoflife"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sliceoflife"
        app:layout_constraintTop_toTopOf="@+id/sliceoflife"
        tools:src="@mipmap/ic_onepunch" />

    <ImageButton
        android:id="@+id/drama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="#00FFFFFF"
        android:src="@mipmap/ic_rezero"
        app:layout_constraintEnd_toEndOf="@+id/sliceoflife"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/sliceoflife"
        app:layout_constraintTop_toBottomOf="@+id/sliceoflife"
        tools:src="@mipmap/ic_rezero" />

    <ImageButton
        android:id="@+id/romance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:src="@mipmap/ic_relife"
        app:layout_constraintBottom_toBottomOf="@+id/drama"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/drama"
        app:layout_constraintTop_toTopOf="@+id/drama"
        tools:src="@mipmap/ic_relife" />

    <ImageButton
        android:id="@+id/comedia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="#00FFFFFF"
        android:src="@mipmap/ic_drstone"
        app:layout_constraintEnd_toEndOf="@+id/drama"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/drama"
        app:layout_constraintTop_toBottomOf="@+id/drama"
        tools:src="@mipmap/ic_drstone" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/slice_of_life"
        app:layout_constraintEnd_toEndOf="@+id/sliceoflife"
        app:layout_constraintStart_toStartOf="@+id/sliceoflife"
        app:layout_constraintTop_toBottomOf="@+id/sliceoflife" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/accion"
        app:layout_constraintEnd_toEndOf="@+id/accion"
        app:layout_constraintStart_toStartOf="@+id/accion"
        app:layout_constraintTop_toBottomOf="@+id/accion" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/drama"
        app:layout_constraintEnd_toEndOf="@+id/drama"
        app:layout_constraintStart_toStartOf="@+id/drama"
        app:layout_constraintTop_toBottomOf="@+id/drama" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/romance"
        app:layout_constraintEnd_toEndOf="@+id/romance"
        app:layout_constraintStart_toStartOf="@+id/romance"
        app:layout_constraintTop_toBottomOf="@+id/romance" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/comedia"
        app:layout_constraintEnd_toEndOf="@+id/comedia"
        app:layout_constraintStart_toStartOf="@+id/comedia"
        app:layout_constraintTop_toBottomOf="@+id/comedia" />
</androidx.constraintlayout.widget.ConstraintLayout>